--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>CNTS Global Trading AB</title>
 	<meta charset="utf-8" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="/css/style.css" />
         <link rel="shortcut icon" href="">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
